<resources>
    <string name="app_name">Kilo-Count</string>
    <string name="_6">6</string>
    <string name="textview">TextView</string>
    <string name="_4">4</string>
    <string name="point">.</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="delete">DELETE</string>
    <string name="save">Save</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="button">Button</string>
    <string name="anotherButton">Button</string>
    <string name="Food3">Food 3</string>
    <string name="Food2">Food 2</string>
    <string name="exercise_2">Exercise 2</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="Food1">Food 1</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="gym">Gym</string>
    <string name="jogging">Jogging</string>
    <string name="breakfast2">Breakfast:</string>
    <string name="lunch2">Lunch:</string>
    <string name="dinner2">Dinner:</string>
    <string name="gym2">Gym:</string>
    <string name="jogging2">Jogging:</string>
    <string name="dates">Button</string>
    <string name="today">Today</string>
    <string name="theDate">Date</string>
    <string name="foodBreakfast">Breakfast:</string>
    <string name="foodLunch">Lunch:</string>
    <string name="foodDinner">Dinner:</string>
    <string name="exeGym">Gym:</string>
    <string name="exeJogging">Jogging:</string>
    <string name="total" />
    <string name="totalNKI">TextView</string>
</resources>
