<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <Button
        android:id="@+id/sixButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fiveButton" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_4"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_8"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintStart_toEndOf="@+id/sevenButton" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="35dp"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/saveEstimationButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="35dp"
        android:text="@string/delete"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/saveEstimationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pointButton" />

    <Button
        android:id="@+id/pointButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginBottom="35dp"
        android:text="@string/point"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/saveEstimationButton"
        app:layout_constraintStart_toEndOf="@+id/zeroButton" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/twoButton" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pointButton"
        app:layout_constraintStart_toEndOf="@+id/oneButton" />

    <Button
        android:id="@+id/saveEstimationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/numbersTextView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview"
        android:textAlignment="viewEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintStart_toEndOf="@+id/fourButton" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="131dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_9"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/eightButton" />

</android.support.constraint.ConstraintLayout>